@@ -1,9 +1,10 @@
 package io.github.sinri.keel.core.helper;
 
 import io.github.sinri.keel.Keel;
-import io.github.sinri.keel.core.properties.KeelOptions;
+import io.github.sinri.keel.core.properties.KeelPropertiesReader;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.JarURLConnection;
 import java.net.URL;
 import java.nio.file.Files;
@@ -13,7 +14,6 @@ import java.util.Enumeration;
 import java.util.List;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-
 /**
  * @since 2.6
  */
@@ -33,12 +33,19 @@ public class KeelFileHelper {
             return Files.readAllBytes(Path.of(filePath));
         } catch (IOException e) {
             if (seekInsideJarWhenNotFound) {
-                URL resource = KeelOptions.class.getClassLoader().getResource(filePath);
-                if (resource == null) {
-                    throw new IOException("Embedded one is not found after not found in FS: " + filePath, e);
+                InputStream resourceAsStream = KeelPropertiesReader.class.getClassLoader().getResourceAsStream(filePath);
+                if (resourceAsStream == null) {
+                    // not found resource
+                    throw new IOException("file also not in jar", e);
                 }
-                String file = resource.getFile();
-                return Files.readAllBytes(Path.of(file));
+                return resourceAsStream.readAllBytes();
+
+//                URL resource = KeelOptions.class.getClassLoader().getResource(filePath);
+//                if (resource == null) {
+//                    throw new IOException("Embedded one is not found after not found in FS: " + filePath, e);
+//                }
+//                String file = resource.getFile();
+//                return Files.readAllBytes(Path.of(file));
             } else {
                 throw e;
             }
@@ -50,7 +57,7 @@ public class KeelFileHelper {
      * @return the URL of target file; if not there, null return.
      */
     public URL getUrlOfFileInJar(String filePath) {
-        return KeelOptions.class.getClassLoader().getResource(filePath);
+        return Keel.class.getClassLoader().getResource(filePath);
     }
 
     /**
